Implement comprehensive authentication system for all pages
- Created centralized auth_check.php with requireAuth() and requireAdmin() functions
- Updated all admin pages to require admin authentication
- Updated user pages to require authentication
- Added authentication error handling and redirects
- Enhanced index.html with authentication error display
- Created AUTHENTICATION_GUIDE.md with complete documentation
- All pages now properly protected with appropriate access levels
- Secure user data isolation and admin privilege verification

--- a/index.html
+++ b/index.html
@@ -1504,6 +1504,41 @@ els.btnCreate.addEventListener('click', async (event)=>{
 // Initialize app after Firebase bundle loads
 window.addEventListener('load', () => {
   
+  // Check for authentication errors in URL parameters
+  const urlParams = new URLSearchParams(window.location.search);
+  const error = urlParams.get('error');
+  
+  if (error) {
+    let message = '';
+    switch (error) {
+      case 'access_denied':
+        message = 'Access denied. Admin privileges required.';
+        break;
+      case 'login_required':
+        message = 'Please sign in to access this page.';
+        break;
+      case 'database_error':
+        message = 'Database connection error. Please try again.';
+        break;
+      case 'admin_required':
+        message = 'Admin access required for this page.';
+        break;
+      default:
+        message = 'Authentication error. Please sign in.';
+    }
+    
+    // Show error message
+    if (window.showMessage) {
+      window.showMessage(message, 'error');
+    } else {
+      alert(message);
+    }
+    
+    // Clear the error from URL
+    const newUrl = window.location.pathname;
+    window.history.replaceState({}, document.title, newUrl);
+  }
+  
   // Update button state for current user and loaded files
   if (window.updateCreateButtonState) {
     window.updateCreateButtonState();
