--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
     <!-- Header -->
     <header class="header">
         <nav class="nav">
-            <a href="#" class="logo">MemoWindow</a>
+            <a href="#" class="logo"><img src="images/logo.png" alt="MemoWindow" style="width: 280px; height: 50px;"></a>
             <ul class="nav-links">
                 <li><a href="#features">Features</a></li>
                 <li><a href="#pricing">Pricing</a></li>
@@ -784,9 +784,9 @@
                 
                 <div class="footer-section">
                     <h3>Legal</h3>
-                    <p><a href="#">Privacy Policy</a></p>
-                    <p><a href="#">Terms of Service</a></p>
-                    <p><a href="#">Refund Policy</a></p>
+                    <p><a href="privacy-policy.html">Privacy Policy</a></p>
+                    <p><a href="terms-of-service.html">Terms of Service</a></p>
+                    <p><a href="refund-policy.html">Refund Policy</a></p>
                 </div>
             </div>
             
