--- a/index.html
+++ b/index.html
@@ -298,16 +298,14 @@
         }
         
         .feature-icon {
-            width: 60px;
-            height: 60px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            border-radius: 12px;
+            width: 80px;
+            height: 80px;
             display: flex;
             align-items: center;
             justify-content: center;
             margin: 0 auto 1.5rem;
-            color: white;
-            font-size: 1.5rem;
+            color: #667eea;
+            font-size: 2.5rem;
         }
         
         .feature-card h3 {
