Hide canvas during waveform creation - only show final result
🎨 Improved user experience:
- Canvas now stays hidden during waveform creation process
- Users only see the beautiful final result image
- Cleaner, more professional creation flow
- No technical drawing process visible to users

🔧 Technical changes:
- Commented out canvas display during drawPreview()
- Canvas remains hidden throughout creation process
- Final result still displays properly in #waveformPreview
- All functionality preserved while improving UX

✨ User flow now:
1. Upload audio file
2. Enter title
3. Click 'Create Memory'
4. See processing status
5. View beautiful final result image
6. No canvas drawing visible during process

🎯 Benefits:
- More polished user experience
- Focus on final result rather than technical process
- Cleaner interface during creation
- Professional appearance

--- a/login.html
+++ b/login.html
@@ -1055,8 +1055,8 @@ function computePeaksFromBuffer(buf, width=2000){
 function drawPreview(){
   if(!peaks) return;
   
-  // Show the preview canvas when drawing
-  els.preview.classList.remove('hidden');
+  // Keep canvas hidden during drawing - only show final result
+  // els.preview.classList.remove('hidden');
   
   const W=els.preview.width,H=els.preview.height;
   ctx.clearRect(0,0,W,H);
