Center upload/record section and fix text contrast for clean design
🎨 Design Improvements:
- Centered upload and record voice section for better visual balance
- Fixed heading text colors for proper contrast (dark gray on white background)
- Improved layout with vertical stacking and consistent spacing
- Enhanced 'or' separator with better typography

✨ Layout Enhancements:
- Upload area and record button now centered with max-width constraint
- Consistent button sizing and alignment
- Better visual hierarchy with proper text contrast
- Clean, intuitive design with centered elements

🔧 Technical Updates:
- Added upload-section container with flexbox centering
- Improved text colors: card-title (#1f2937), card-subtitle (#6b7280)
- Enhanced button styling with consistent width and centering
- Better spacing and gap management for visual balance

--- a/login.html
+++ b/login.html
@@ -132,13 +132,14 @@
     .card-title {
       font-size: 1.5rem;
       font-weight: 600;
-      color: #333;
+      color: #1f2937;
       margin-bottom: 0.5rem;
     }
     
     .card-subtitle {
-      color: #666;
+      color: #6b7280;
       font-size: 1rem;
+      line-height: 1.5;
     }
     
     .form-group {
@@ -784,8 +785,8 @@
       <h2 class="card-title">Add Your Audio</h2>
       <p class="card-subtitle">Upload audio files or record your voice to create beautiful waveform art</p>
     </div>
-    <div class="row">
-      <label for="file" class="file-upload-area" id="fileUploadArea" style="cursor: pointer;">
+    <div class="upload-section" style="display: flex; flex-direction: column; align-items: center; gap: 1rem;">
+      <label for="file" class="file-upload-area" id="fileUploadArea" style="cursor: pointer; width: 100%; max-width: 300px;">
         <input id="file" type="file" accept="audio/*" multiple style="display: none;">
         <svg class="file-upload-icon" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
           <path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20Z"/>
@@ -793,8 +794,8 @@
         </svg>
         <span class="file-upload-text" id="fileUploadText">Upload Audio Files</span>
       </label>
-      <span style="color: #6b7280; font-size: 14px; margin: 0 8px;">or</span>
-      <button id="btnRecord" type="button" class="btn-danger" style="display: flex; align-items: center; gap: 6px;">
+      <span style="color: #6b7280; font-size: 14px; font-weight: 500;">or</span>
+      <button id="btnRecord" type="button" class="btn-danger" style="display: flex; align-items: center; gap: 6px; width: 100%; max-width: 300px; justify-content: center;">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
           <path d="M12,2A3,3 0 0,1 15,5V11A3,3 0 0,1 12,14A3,3 0 0,1 9,11V5A3,3 0 0,1 12,2M19,11C19,14.53 16.39,17.44 13,17.93V21H11V17.93C7.61,17.44 5,14.53 5,11H7A5,5 0 0,0 12,16A5,5 0 0,0 17,11H19Z" />
         </svg>
