--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MemoWindow - Create Beautiful Waveform Memories</title>
+  <!-- Cache bust: v2.1 -->
   <meta name="description" content="Transform precious voice recordings into beautiful waveform art and create lasting visual memories">
   <meta name="theme-color" content="#667eea">
   <meta name="apple-mobile-web-app-capable" content="yes">
