Fix: Remove original_name fallback from title display
🐛 Bug Fix:
- Removed waveform.original_name fallback from title generation
- Now shows 'Untitled Memory' instead of filename when no custom title
- Prevents audio filenames from appearing in MemoWindows list
- Cleaner display with proper fallback text

✨ Result:
- No more 'bbc_birds---at_07074197.mp3' in titles
- Shows custom titles or 'Untitled Memory' as fallback
- Maintains clean, user-friendly display

--- a/login.html
+++ b/login.html
@@ -1024,7 +1024,7 @@ function displayWaveforms(waveforms) {
   console.log('🔍 Generating HTML for', waveforms.length, 'waveforms');
   
   const waveformItems = waveforms.map(waveform => {
-    const title = waveform.title || waveform.original_name || 'Untitled';
+    const title = waveform.title || 'Untitled Memory';
     const date = new Date(waveform.created_at).toLocaleDateString();
     const time = new Date(waveform.created_at).toLocaleTimeString();
     
@@ -1470,7 +1470,7 @@ async function loadMoreWaveforms(offset) {
     if (waveforms.length > 0) {
       // Generate HTML for additional waveforms
       const waveformItems = waveforms.map(waveform => {
-        const title = waveform.title || waveform.original_name || 'Untitled';
+        const title = waveform.title || 'Untitled Memory';
         const date = new Date(waveform.created_at).toLocaleDateString();
         const time = new Date(waveform.created_at).toLocaleTimeString();
         
