Add aggressive cache-busting to force browser refresh
🔄 Cache Management:
- Added no-cache meta tags to prevent browser caching
- Updated cache-busting comment with date
- Forces browser to reload the latest MemoWindows display changes
- Ensures users see the fixed list without audio filenames

--- a/login.html
+++ b/login.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
   <title>MemoWindow - Create Beautiful Waveform Memories</title>
-  <!-- Cache bust: v2.1 -->
+  <!-- Cache bust: v2.2 - 2025-01-09 -->
   <meta name="description" content="Transform precious voice recordings into beautiful waveform art and create lasting visual memories">
   <meta name="theme-color" content="#667eea">
   <meta name="apple-mobile-web-app-capable" content="yes">
