Fix: Use title variable instead of waveform.title in delete button
🐛 Bug Fix:
- Fixed delete button to use 'title' variable instead of 'waveform.title'
- Ensures consistent title handling throughout the MemoWindows list
- Prevents potential issues with undefined waveform.title values
- Maintains proper fallback to 'Untitled Memory' when no custom title exists

--- a/login.html
+++ b/login.html
@@ -1053,7 +1053,7 @@ function displayWaveforms(waveforms) {
                </svg>
                QR
              </a>
-             <button onclick="deleteMemory(${waveform.id}, '${waveform.title.replace(/'/g, "\\'")}', this)" class="waveform-link" style="color: #dc2626; text-decoration: none; display: flex; align-items: center; gap: 4px; font-size: 14px; background: none; border: none; cursor: pointer; padding: 0;">
+             <button onclick="deleteMemory(${waveform.id}, '${title.replace(/'/g, "\\'")}', this)" class="waveform-link" style="color: #dc2626; text-decoration: none; display: flex; align-items: center; gap: 4px; font-size: 14px; background: none; border: none; cursor: pointer; padding: 0;">
                <svg width="14" height="14" viewBox="0 0 24 24" fill="currentColor">
                  <path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"/>
                </svg>
