Fix: Detect and filter out filenames from title display
🐛 Bug Fix:
- Added filename detection logic to identify titles that are actually filenames
- Checks for common audio file extensions (.mp3, .wav, .m4a, .ogg)
- Shows 'Untitled Memory' instead of filenames like 'bbc_birds---at_07074197.mp3'
- Ensures clean, user-friendly titles in MemoWindows list

✨ Result:
- No more audio filenames displayed as titles
- Proper fallback to 'Untitled Memory' for filename titles
- Maintains custom titles when they exist and aren't filenames

--- a/login.html
+++ b/login.html
@@ -1027,7 +1027,9 @@ function displayWaveforms(waveforms) {
   console.log('🔍 Generating HTML for', waveforms.length, 'waveforms');
   
   const waveformItems = waveforms.map(waveform => {
-    const title = waveform.title || 'Untitled Memory';
+    // Check if title looks like a filename (contains file extension)
+    const isFilename = waveform.title && (waveform.title.includes('.mp3') || waveform.title.includes('.wav') || waveform.title.includes('.m4a') || waveform.title.includes('.ogg'));
+    const title = (waveform.title && !isFilename) ? waveform.title : 'Untitled Memory';
     const date = new Date(waveform.created_at).toLocaleDateString();
     const time = new Date(waveform.created_at).toLocaleTimeString();
     
@@ -1473,7 +1475,9 @@ async function loadMoreWaveforms(offset) {
     if (waveforms.length > 0) {
       // Generate HTML for additional waveforms
       const waveformItems = waveforms.map(waveform => {
-        const title = waveform.title || 'Untitled Memory';
+        // Check if title looks like a filename (contains file extension)
+    const isFilename = waveform.title && (waveform.title.includes('.mp3') || waveform.title.includes('.wav') || waveform.title.includes('.m4a') || waveform.title.includes('.ogg'));
+    const title = (waveform.title && !isFilename) ? waveform.title : 'Untitled Memory';
         const date = new Date(waveform.created_at).toLocaleDateString();
         const time = new Date(waveform.created_at).toLocaleTimeString();
         
