--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
   <title>MemoWindow - Create Beautiful Waveform Memories</title>
-  <!-- Cache bust: v2.2 - 2025-01-09 -->
+  <!-- Cache bust: v2.3 - 2025-01-09 - Filename fix -->
   <meta name="description" content="Transform precious voice recordings into beautiful waveform art and create lasting visual memories">
   <meta name="theme-color" content="#667eea">
   <meta name="apple-mobile-web-app-capable" content="yes">
