Create dedicated memories page with redirect after memory creation
🎨 New Memories Page:
- Created memories.html with beautiful grid layout
- Shows all user memories with images, titles, and metadata
- Includes action buttons: View, QR Code, Order Print, Delete
- Responsive design with modern card-based layout

✨ Features:
- Memory cards with preview images and titles
- Creation date and time display
- Modal view for full-size memory images
- Order print functionality integration
- Delete confirmation with UI updates
- Empty state when no memories exist
- Error handling with retry functionality

🔧 Navigation & Flow:
- Added 'My Memories' link to app.html header
- Redirect to memories page after successful memory creation
- 1.5 second delay to show success message before redirect
- Seamless navigation between create and view pages

🎯 User Experience:
- Clean, organized view of all memories
- Easy access to all memory actions
- Professional grid layout for browsing
- Mobile-responsive design
- Loading states and error handling

--- a/app.html
+++ b/app.html
@@ -358,6 +358,7 @@
       <div id="userInfo" class="user-info hidden">
         <img id="userAvatar" class="user-avatar" src="" alt="User avatar">
         <span id="userName">Loading...</span>
+        <a href="memories.html" class="header-link">My Memories</a>
         <a id="ordersLink" href="#" class="header-link">My Orders</a>
         <a id="btnLogout" href="#" class="header-link">Sign Out</a>
       </div>
@@ -830,10 +831,10 @@
           memoryPreview.classList.add('hidden');
         }
         
-        // Reload waveforms list
-        if (window.loadUserWaveforms) {
-          window.loadUserWaveforms();
-        }
+        // Redirect to memories page
+        setTimeout(() => {
+          window.location.href = 'memories.html';
+        }, 1500); // Small delay to show success message
         
       } catch (error) {
         console.error('Create memory error:', error);
