Fix double file selection issue in upload area
🔧 File Upload Fix:
- Removed redundant JavaScript click handler for file upload area
- HTML label already handles file input triggering automatically
- Eliminated double file selection dialog issue
- Maintained drag and drop functionality

✨ User Experience:
- Single click now properly opens file selection dialog
- No more double file selection prompts
- Cleaner, more reliable file upload interaction
- Standard HTML label behavior preserved

🎯 Technical Details:
- Label element with 'for' attribute automatically triggers associated input
- JavaScript click handler was redundant and causing double triggers
- Drag and drop functionality remains intact
- File change event handler still works properly

--- a/app.html
+++ b/app.html
@@ -506,7 +506,7 @@
       
       // File upload functionality
       fileInput.addEventListener('change', handleFileSelect);
-      fileUploadArea.addEventListener('click', () => fileInput.click());
+      // Note: No need for click handler since the label already handles file input triggering
       fileUploadArea.addEventListener('dragover', handleDragOver);
       fileUploadArea.addEventListener('drop', handleFileDrop);
       
