Move admin button to after user name in header menu
🎯 Menu Reorganization:
- Updated header menu order: My Memories, My Orders, Sign Out, User Profile, Admin
- Moved user photo and name to the end of menu items
- Removed duplicate admin links from static HTML

🔧 Dynamic Admin Link:
- Admin link now appears dynamically after user profile section
- Only shows for users with admin privileges
- Red styling (#dc2626) to match admin page design
- Properly positioned after user name and photo

✨ Technical Implementation:
- Updated app-auth.js to insert admin link after user profile
- Removed static admin links from HTML templates
- Maintains consistent styling across app.html and memories.html
- Admin link points to admin.php with proper user_id parameter

🎨 Result:
- Clean menu layout with user profile at the end
- Admin button appears after user name for admin users
- Consistent styling and positioning across all pages

--- a/memories.html
+++ b/memories.html
@@ -95,6 +95,15 @@
       color: #333;
     }
     
+    .user-profile {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      padding: 8px 12px;
+      border-radius: 6px;
+      background: rgba(0, 0, 0, 0.05);
+    }
+    
     /* Main Content */
     .wrap {
       padding: 4rem 1rem;
@@ -331,11 +340,13 @@
         <img src="images/logo.png" alt="MemoWindow" style="height: 40px; width: auto;">
       </a>
       <div id="userInfo" class="user-info hidden">
-        <img id="userAvatar" class="user-avatar" src="" alt="User avatar">
-        <span id="userName">Loading...</span>
-        <a href="app.html" class="header-link">Create Memory</a>
+        <a href="memories.html" class="header-link">My Memories</a>
         <a id="ordersLink" href="#" class="header-link">My Orders</a>
         <a id="btnLogout" href="#" class="header-link">Sign Out</a>
+        <div class="user-profile">
+          <img id="userAvatar" class="user-avatar" src="" alt="User avatar">
+          <span id="userName">Loading...</span>
+        </div>
       </div>
     </nav>
   </header>
