Improve memories page error handling and debugging
🔧 Enhanced Error Handling:
- Added better error handling for memories module loading
- Added fallback error message if module fails to load
- Improved console logging for debugging module loading
- Added success confirmation when module loads correctly

✨ Technical Improvements:
- Enhanced template processor with better error handling
- Added fallback UI when JavaScript module fails to load
- Better debugging information for troubleshooting
- More robust error recovery

🎯 Debugging Features:
- Console logs show module loading progress
- Clear error messages if module fails to load
- Fallback UI with refresh button
- Better visibility into what's happening

🔍 Next Steps:
- Check browser console for module loading messages
- Look for '✅ Memories module loaded successfully' or error messages
- Test memories page with improved debugging

--- a/memories.html
+++ b/memories.html
@@ -455,9 +455,24 @@
         
         // Import and initialize memories functionality
         import("./src/memories.js").then(module => {
+            console.log("✅ Memories module loaded successfully");
             module.initMemories();
         }).catch(error => {
-            console.error("Failed to load memories module:", error);
+            console.error("❌ Failed to load memories module:", error);
+            // Fallback: show error message
+            const container = document.getElementById("memoriesContainer");
+            if (container) {
+                container.innerHTML = `
+                    <div class="empty-state">
+                        <div class="empty-state-icon">⚠️</div>
+                        <h3>Error Loading Memories</h3>
+                        <p>There was a problem loading the memories module. Please refresh the page.</p>
+                        <button onclick="location.reload()" class="create-memory-btn" style="margin-top: 1rem;">
+                            Refresh Page
+                        </button>
+                    </div>
+                `;
+            }
         });
         
     </script>
