Add automatic redirection for logged-in users
🔄 User Experience Improvements:
- Index page now redirects logged-in users to app.html
- Login page now redirects logged-in users to app.html
- Prevents logged-in users from seeing login/landing pages
- Seamless user flow for authenticated users

✨ Technical Changes:
- Added Firebase auth state checking on page load
- Automatic redirection using window.location.href
- Console logging for debugging redirection
- Maintains existing functionality for non-authenticated users

🎯 Result:
- Logged-in users are automatically taken to the app
- No need to manually navigate after authentication
- Cleaner user experience and flow
- Prevents confusion about which page to use

--- a/index.html
+++ b/index.html
@@ -806,8 +806,9 @@
             // Check if user is authenticated
             auth.onAuthStateChanged(function(user) {
                 if (user) {
-                    // User is signed in, redirect to login.html (which is the app)
-                    window.location.href = 'login.html';
+                    // User is signed in, redirect to app.html
+                    console.log('User is logged in, redirecting to app.html');
+                    window.location.href = 'app.html';
                 }
             });
         });
