Fix voice clone buttons not appearing on memories page
🔧 Fixes:
- Added memory-item class to memory cards
- Added required data attributes (memory-id, audio-url, memory-title)
- Added debugging logs to voice clone functionality
- Voice clone buttons now appear on memories with audio

🎯 Changes:
- src/memories.js: Added data attributes and memory-item class
- src/voice-clone.js: Added debugging and improved button detection
- Regenerated memories.html with updated functionality

✅ Result:
- Voice clone buttons now appear on memories that have audio
- Purple 'Clone Voice' buttons visible in memory actions
- Proper data attributes for voice cloning functionality

--- a/memories.html
+++ b/memories.html
@@ -457,6 +457,14 @@
         import("./src/memories.js").then(module => {
             console.log("✅ Memories module loaded successfully");
             module.initMemories();
+            
+            // Also initialize voice cloning
+            import("./src/voice-clone.js").then(voiceModule => {
+                console.log("✅ Voice clone module loaded successfully");
+                voiceModule.initVoiceClone();
+            }).catch(voiceError => {
+                console.error("❌ Failed to load voice clone module:", voiceError);
+            });
         }).catch(error => {
             console.error("❌ Failed to load memories module:", error);
             // Fallback: show error message
