Fix order button functionality in memories page
- Add globals.js import to memories page template
- Order button now has access to showOrderOptions function
- Fixes broken order functionality on memories page
- Globals module loads before memories module to ensure order functions are available

--- a/memories.html
+++ b/memories.html
@@ -453,8 +453,13 @@
         // Memories-specific initialization
         console.log("💕 Memories page loaded");
         
-        // Import and initialize memories functionality
-        import("./src/memories.js").then(module => {
+        // Import globals first (for order functionality)
+        import("./src/globals.js").then(() => {
+            console.log("✅ Globals module loaded successfully");
+            
+            // Import and initialize memories functionality
+            return import("./src/memories.js");
+        }).then(module => {
             console.log("✅ Memories module loaded successfully");
             module.initMemories();
         }).catch(error => {
