Align pricing feature lists to the left
- Add text-align: left to .pricing-features and .pricing-features li
- Improves readability and visual consistency of subscription package features

--- a/index.html
+++ b/index.html
@@ -387,11 +387,13 @@
         .pricing-features {
             list-style: none;
             margin-bottom: 2rem;
+            text-align: left;
         }
         
         .pricing-features li {
             padding: 0.5rem 0;
             color: #666;
+            text-align: left;
         }
         
         .pricing-features li::before {
