Add debugging to subscription flow to troubleshoot Stripe checkout issue
- Add console logging to startSubscription function to debug auth availability
- Add debugging to createSubscriptionCheckout function to track API calls
- Enhanced logging to identify where the flow is breaking
- Debug information will help identify if:
  - Auth object is available when subscription button is clicked
  - Intended action is being stored correctly
  - API calls are being made successfully
  - Response data is being parsed correctly
- This will help troubleshoot why users are not reaching Stripe checkout

--- a/index.html
+++ b/index.html
@@ -990,6 +990,8 @@
         // Subscription functionality
         window.startSubscription = async function(packageSlug, billingCycle) {
             console.log('startSubscription called with:', packageSlug, billingCycle);
+            console.log('window.auth available:', !!window.auth);
+            console.log('window.auth object:', window.auth);
             
             // Check if auth is available
             if (!window.auth) {
@@ -1000,6 +1002,7 @@
                     package: packageSlug,
                     billing: billingCycle
                 }));
+                console.log('Stored intended action:', localStorage.getItem('intendedAction'));
                 window.location.href = 'login.html';
                 return;
             }
