Add helpful error message for domain confusion
- Add clear message directing users to local development server
- Helps users understand they should access http://localhost/memowindow
- Prevents confusion when accessing live site vs local development

--- a/index.html
+++ b/index.html
@@ -995,6 +995,7 @@
             pricingGrid.innerHTML = `
                 <div class="loading-packages">
                     <p>Unable to load packages. Please refresh the page.</p>
+                    <p><small>Make sure you're accessing the local development server: <strong>http://localhost/memowindow</strong></small></p>
                     <button onclick="loadPackages()" style="background: #667eea; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; margin-top: 10px;">
                         Try Again
                     </button>
