Remove homepage redirect to app.html for logged-in users
- Remove automatic redirect to app.html when user is logged in on homepage
- Allow logged-in users to access subscription buttons on homepage
- Update auth state listener to not redirect logged-in users
- This fixes the issue where logged-in users couldn't access subscription buttons
- Now logged-in users can stay on homepage and click subscription buttons directly

--- a/index.html
+++ b/index.html
@@ -836,18 +836,16 @@
             // Check current user immediately
             const currentUser = auth.currentUser;
             if (currentUser) {
-                console.log('Current user found, redirecting to app.html');
-                window.location.href = 'app.html';
-                return;
+                console.log('Current user found, staying on homepage for subscription access');
+                // Don't redirect - let logged-in users access subscription buttons
             }
             
             // Also set up auth state listener as backup
             auth.onAuthStateChanged(function(user) {
                 console.log('Auth state changed on index:', user ? 'Logged in' : 'Logged out');
                 if (user) {
-                    // User is signed in, redirect to app.html
-                    console.log('User is logged in, redirecting to app.html');
-                    window.location.href = 'app.html';
+                    // User is signed in, but don't redirect - let them access subscription buttons
+                    console.log('User is logged in, staying on homepage for subscription access');
                 }
             });
         });
