Update recorder button with microphone icon and green recording state
- Change default recorder icon to proper microphone icon
- Add green background color (#22c55e) when recording is in progress
- Update green shadow effect when recording
- Keep existing stop icon (square) when recording
- Restore microphone icon when recording stops
- Improved visual feedback for recording state
- More intuitive UI with proper microphone and stop icons

--- a/app.html
+++ b/app.html
@@ -348,6 +348,8 @@
         }
         
         .record-button.recording {
+            background: #22c55e;
+            box-shadow: 0 4px 12px rgba(34, 197, 94, 0.3);
             animation: pulse 1.5s infinite;
         }
         
@@ -475,7 +477,8 @@
                 <p style="color: #6b7280; margin-bottom: 1rem;">Or record your voice</p>
                 <button id="btnRecord" type="button" class="record-button" style="display: flex; align-items: center; justify-content: center;">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M12 1c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2s2-.9 2-2V3c0-1.1-.9-2-2-2zm-1 19.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z"/>
+                        <path d="M12 14c1.66 0 3-1.34 3-3V5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3z"/>
+                        <path d="M17 11c0 2.76-2.24 5-5 5s-5-2.24-5-5H5c0 3.53 2.61 6.43 6 6.92V21h2v-3.08c3.39-.49 6-3.39 6-6.92h-2z"/>
                     </svg>
                 </button>
             </div>
