Fix microphone icon restoration after recording
- Replace complex microphone SVG with simpler, cleaner design
- Ensure consistent microphone icon in both HTML and JavaScript
- Fix issue where globe icon was showing instead of microphone
- Use proper microphone icon that displays correctly
- Maintain green recording state and stop icon functionality

--- a/app.html
+++ b/app.html
@@ -477,8 +477,7 @@
                 <p style="color: #6b7280; margin-bottom: 1rem;">Or record your voice</p>
                 <button id="btnRecord" type="button" class="record-button" style="display: flex; align-items: center; justify-content: center;">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M12 14c1.66 0 3-1.34 3-3V5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3z"/>
-                        <path d="M17 11c0 2.76-2.24 5-5 5s-5-2.24-5-5H5c0 3.53 2.61 6.43 6 6.92V21h2v-3.08c3.39-.49 6-3.39 6-6.92h-2z"/>
+                        <path d="M12 2c1.1 0 2 .9 2 2v6c0 1.1-.9 2-2 2s-2-.9-2-2V4c0-1.1.9-2 2-2zm6 8c0 3.3-2.7 6-6 6s-6-2.7-6-6H4c0 4.4 3.6 8 8 8s8-3.6 8-8h-2z"/>
                     </svg>
                 </button>
             </div>
