Fix admin_orders.php JOIN clause column reference
- Change o.product_id to o.product_variant_id in JOIN clause
- Fixes SQLSTATE[42S22]: Column not found error
- Consistent with orders table schema and other admin pages
- Resolves database error when loading admin orders page

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         .hero {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            padding: 8rem 0 6rem;
+            padding: 12rem 0 6rem!important;
             text-align: center;
             position: relative;
             overflow: hidden;
