--- a/memories.html
+++ b/memories.html
@@ -95,7 +95,7 @@
         
         /* Main Content */
         .wrap {
-            padding: 4rem 1rem;
+            padding: 8rem 1rem!important;
             max-width: 1200px;
             margin: 0 auto;
             margin-top: 50px;
